--- a/manifest.yaml
+++ b/manifest.yaml
@@ -8,6 +8,7 @@ release-notes: |
   - Enables configuration for either a pruned or full archival internal Bitcoin Core node
   - Sets advanced configuration for enabling block explorer rescan at a specific start height
   - Renames Reset Server Policy action to Enable Registrations
+  - Remove external bitcoind connection
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
