--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,14 +1,8 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.4.7
+version: 1.4.7.1
 release-notes: |
-  - Updates to most current released version: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.4.7
-  - Breaking changes since last release: 
-    - If you activated plugins, you will need to update them
-  - Enables configuration for either a pruned or full archival internal Bitcoin Core node
-  - Sets advanced configuration for enabling block explorer rescan at a specific start height
-  - Renames Reset Server Policy action to Enable Registrations
-  - Remove external bitcoind connection
+  - Bumps version requirement for Core Lightning to allow update to v0.11.1
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -96,9 +90,9 @@ config:
     io-format: yaml
 dependencies:
   btc-rpc-proxy:
-    version: ">=0.3.2.1 <0.3.3"
+    version: ">=0.3.2.1 <0.4.0"
     requirement:
-      type: "opt-in"
+      type: "opt-out"
       how: Can alternatively use the internal Bitcoin Core if it is unpruned (ie. is a full archival node).
     description: Used for creating a permissioned RPC user and to fetch validated blocks on demand.
     config:
@@ -135,7 +129,7 @@ dependencies:
           compat: /mnt/assets
         io-format: yaml
   bitcoind:
-    version: ">=0.21.1.2 <23.0.0"
+    version: ">=0.21.1.2 <24.0.0"
     requirement:
       type: "opt-in"
       how: Internal node is recommended, but you can alternatively configure an external bitcoin node for P2P connections. RPC connections require using the internal full archival Bitcoin Core node, or Bitcoin Proxy and a pruned Bitcoin Core node.
@@ -181,10 +175,10 @@ dependencies:
     description: Used to communicate with the Lightning Network.
     config: ~
   c-lightning:
-    version: ">=0.10.0.1 <0.11.0"
+    version: ">=0.10.0.1 <0.12.0"
     requirement:
       type: "opt-in"
-      how: Optionally use c-lightning for internal lightning network node implementation.
+      how: Optionally use Core Lightning for internal lightning network node implementation.
     description: Used to communicate with the Lightning Network.
     config: ~
 volumes:
