--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,10 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.4.7.3
+version: 1.6.2
 release-notes: |
-  * Switch to using new eOS APIs for faster configuration and properties
+  * Update NBXplorer to latest and migration database to postgres
+  * Update BTCPay Server to latest: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.2
+  * Fix migrations to ensure successful updates to the latest version
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
