update migrations to use js procedures

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -204,38 +204,8 @@ actions:
       io-format: json
 migrations:
   from:
-    "<1.4.7":
-      type: docker
-      image: main
-      system: false
-      entrypoint: /usr/local/bin/migrations/from_lt_1_4_7.sh
-      args: []
-      mounts:
-        main: /datadir
-      io-format: json
-    ">=1.4.7":
-      type: docker
-      image: main
-      system: false
-      entrypoint: "/bin/echo"
-      args: ['{"configured": true}']
-      io-format: json
-      inject: false
+    "*":
+      type: script
   to:
-    "<1.4.7":
-      type: docker
-      image: main
-      system: false
-      entrypoint: /usr/local/bin/migrations/to_lt_1_4_7.sh
-      args: []
-      mounts:
-        main: /datadir
-      io-format: json
-    ">=1.4.7":
-      type: docker
-      image: main
-      system: false
-      entrypoint: "/bin/echo"
-      args: ['{"configured": true}']
-      io-format: json
-      inject: false
+    "*":
+      type: script
