--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,8 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.4.7.3
+version: 1.4.7.4
 release-notes: |
-  * Switch to using new eOS APIs for faster configuration and properties
+  * Update version requirements for compatibility with CLN 0.12 and LND 0.15
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -85,14 +85,14 @@ dependencies:
       auto-configure:
         type: script
   lnd:
-    version: ">=0.13.3.1 <0.15.0"
+    version: ">=0.13.3.1 <0.16.0"
     requirement:
       type: "opt-in"
       how: Optionally use LND for internal lightning network node implementation.
     description: Used to communicate with the Lightning Network.
     config: ~
   c-lightning:
-    version: ">=0.10.0.1 <0.12.0"
+    version: ">=0.10.0.1 <0.13.0"
     requirement:
       type: "opt-in"
       how: Optionally use Core Lightning for internal lightning network node implementation.
