--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,9 +2,9 @@ id: btcpayserver
 title: BTCPay Server
 version: 1.6.6
 release-notes: |
-  * Update NBXplorer to latest and migration database to postgres
-  * Update BTCPay Server to latest: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.2
-  * Fix migrations to ensure successful updates to the latest version
+  * Update NBXplorer to latest and migration database to postgres (NOTE: this process can take from 5 - 40 minutes, depending on the size of your instance's database)
+  * Update BTCPay Server to v1.6.6: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.6
+  * Update version requirements for compatibility with CLN 0.12 and LND 0.15
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -87,14 +87,14 @@ dependencies:
       auto-configure:
         type: script
   lnd:
-    version: ">=0.13.3.1 <0.15.0"
+    version: ">=0.13.3.1 <0.16.0"
     requirement:
       type: "opt-in"
       how: Optionally use LND for internal lightning network node implementation.
     description: Used to communicate with the Lightning Network.
     config: ~
   c-lightning:
-    version: ">=0.10.0.1 <0.12.0"
+    version: ">=0.10.0.1 <0.13.0"
     requirement:
       type: "opt-in"
       how: Optionally use Core Lightning for internal lightning network node implementation.
