--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,6 +2,7 @@ id: btcpayserver
 title: BTCPay Server
 version: 1.6.6
 release-notes: |
+  * KNOWN ISSUE: pull payments section of UI is throwing an error and not displaying - issue created on upstream repo
   * Update NBXplorer to latest and migration database to postgres (NOTE: this process can take from 5 - 40 minutes, depending on the size of your instance's database)
   * Update BTCPay Server to v1.6.6: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.6
   * Update version requirements for compatibility with CLN 0.12 and LND 0.15
