--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,9 +1,9 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.6.9
+version: 1.6.10
 release-notes: |
-  * Update NBXplorer to latest and migration database to postgres (NOTE: this process can take from 5 - 40 minutes, depending on the size of your instance's database)
-  * Update BTCPay Server to v1.6.9: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.9
+  * Update NBXplorer to latest and migrate database to postgres (NOTE: this process can take from 5 - 40 minutes, depending on the size of your instance's database)
+  * Update BTCPay Server to v1.6.10: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.10
   * Update docker initialization system to run multiple processes more efficiently
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
