--- a/manifest.yaml
+++ b/manifest.yaml
@@ -4,6 +4,7 @@ version: 1.6.11
 release-notes: |
   * Update NBXplorer to v2.3.38
   * Update BTCPay Server to v1.6.11: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.11
+  * Fixes dependency requirement when using a pruned Bitcoin node with Bitcoin Proxy
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
