--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,6 +1,7 @@
 id: btcpayserver
 title: BTCPay Server
 version: 1.6.12
+eos-version: 0.3.1
 release-notes: |
   * Update NBXplorer to v2.3.40
   * Update BTCPay Server to v1.6.12: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.12
