--- a/manifest.yaml
+++ b/manifest.yaml
@@ -21,27 +21,22 @@ assets:
   instructions: instructions.md
   docker-images: image.tar
 main:
-  type: docker
-  image: main
-  entrypoint: "/init"
-  args: []
-  mounts:
-    lnd: /mnt/lnd
-    c-lightning: "/mnt/c-lightning"
-    main: /datadir
+  type: script
+containers:
+  main:
+    image: main
+    mounts:
+      lnd: /mnt/lnd
+      c-lightning: "/mnt/c-lightning"
+      main: /datadir
 health-checks:
   explorer-synced:
     name: Explorer Synced
     success-message: The UTXO tracker is synced to the tip of the Bitcoin blockchain
-    type: docker
-    image: main
-    entrypoint: health_check.sh
-    args: ["nbx"]
-    inject: true
-    io-format: json
+    type: script
   web-ui:
     name: Web UI
-    success-message: BTCPay Server is ready to visit in a web browser
+    success-message: Ready to visit in a web browser
     type: docker
     image: main
     entrypoint: health_check.sh
