--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,10 +1,12 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.6.10
+version: 1.6.12
+eos-version: 0.3.1
 release-notes: |
-  * Update NBXplorer to latest and migrate database to postgres (NOTE: this process can take from 5 - 40 minutes, depending on the size of your instance's database)
-  * Update BTCPay Server to v1.6.10: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.10
-  * Update docker initialization system to run multiple processes more efficiently
+  * Update NBXplorer to v2.3.40
+  * Update BTCPay Server to v1.6.12: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.12
+  * Fixes dependency requirement when using a pruned Bitcoin node with Bitcoin Proxy
+  * Update instructions for Vault integration
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
