--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,9 @@
 id: btcpayserver
 title: BTCPay Server
 version: 1.6.12.1
-release-notes: Update to run on x86_64 architecture
+release-notes: | 
+  * Update to run on x86_64 architecture
+  * Utilize new eOS APIs
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -20,42 +22,27 @@ assets:
   icon: icon.png
   instructions: instructions.md
 main:
-  type: docker
-  image: main
-  entrypoint: "/init"
-  args: []
-  mounts:
-    lnd: /mnt/lnd
-    c-lightning: "/mnt/c-lightning"
-    main: /datadir
+  type: script
+containers:
+  main:
+    image: main
+    mounts:
+      lnd: /mnt/lnd
+      c-lightning: "/mnt/c-lightning"
+      main: /datadir
 health-checks:
   explorer-synced:
     name: Explorer Synced
     success-message: The UTXO tracker is synced to the tip of the Bitcoin blockchain
-    type: docker
-    image: main
-    entrypoint: health_check.sh
-    args: ["nbx"]
-    inject: true
-    io-format: json
+    type: script
   web-ui:
     name: Web UI
     success-message: BTCPay Server is ready to visit in a web browser
-    type: docker
-    image: main
-    entrypoint: health_check.sh
-    args: ["web"]
-    io-format: json
-    inject: true
+    type: script
   api:
     name: Data Interface
     success-message: The API is operational
-    type: docker
-    image: main
-    entrypoint: health_check.sh
-    args: ["api"]
-    io-format: json
-    inject: true
+    type: script
 config:
   get:
     type: script
