--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,12 +1,7 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.6.12
-eos-version: 0.3.1
-release-notes: |
-  * Update NBXplorer to v2.3.40
-  * Update BTCPay Server to v1.6.12: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.6.12
-  * Fixes dependency requirement when using a pruned Bitcoin node with Bitcoin Proxy
-  * Update instructions for Vault integration
+version: 1.6.12.1
+release-notes: Update to run on x86_64 architecture
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -24,7 +19,6 @@ assets:
   license: LICENSE
   icon: icon.png
   instructions: instructions.md
-  docker-images: image.tar
 main:
   type: docker
   image: main
@@ -107,8 +101,6 @@ dependencies:
 volumes:
   main:
     type: data
-  utils:
-    type: assets
   lnd:
     type: pointer
     package-id: lnd
