--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,10 +3,10 @@ title: BTCPay Server
 version: 1.7.7
 release-notes: |
   * Includes upstream releases for: 
-    - [v1.7.4]https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.4), which recommends updating plugins. 
-    - [v1.7.5]https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.5), which includes several bugfixes.
-    - [v1.7.6]https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.6), which includes two vulnerability fixes. 
-    - [v1.7.7]https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.6), which includes several bugfixes for the prior release.
+    - [v1.7.4](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.4), which recommends updating plugins. 
+    - [v1.7.5](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.5), which includes several bugfixes.
+    - [v1.7.6](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.6), which includes two vulnerability fixes. 
+    - [v1.7.7](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.6), which includes several bugfixes for the prior release.
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
